<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="game_bar_enable"
        android:title="@string/game_bar_enable_title"
        android:summary="@string/game_bar_summary"
        android:defaultValue="false" />

    <PreferenceCategory
        android:title="@string/game_bar_category_features"
        android:dependency="game_bar_enable">

        <SwitchPreferenceCompat
            android:key="game_bar_fps_enable"
            android:title="@string/game_bar_fps_title"
            android:summary="@string/game_bar_fps_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_temp_enable"
            android:title="@string/game_bar_temp_title"
            android:summary="@string/game_bar_temp_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_cpu_usage_enable"
            android:title="@string/game_bar_cpu_usage_title"
            android:summary="@string/game_bar_cpu_usage_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_cpu_clock_enable"
            android:title="@string/game_bar_cpu_clock_title"
            android:summary="@string/game_bar_cpu_clock_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_cpu_temp_enable"
            android:title="@string/game_bar_cpu_temp_title"
            android:summary="@string/game_bar_cpu_temp_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_ram_enable"
            android:title="@string/game_bar_ram_title"
            android:summary="@string/game_bar_ram_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_gpu_temp_enable"
            android:title="@string/game_bar_gpu_temp_title"
            android:summary="@string/game_bar_gpu_temp_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/game_bar_category_fps_method"
        android:dependency="game_bar_fps_enable">
        <ListPreference
            android:key="game_bar_fps_method"
            android:title="@string/game_bar_fps_method_title"
            android:summary="@string/game_bar_fps_method_summary"
            android:defaultValue="new"
            android:entries="@array/game_bar_fps_method_entries"
            android:entryValues="@array/game_bar_fps_method_values" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/game_bar_category_customization"
        android:dependency="game_bar_enable">

        <com.android.settingslib.widget.SliderPreference
            android:key="game_bar_text_size"
            android:title="@string/game_bar_text_size_title"
            android:summary="@string/game_bar_text_size_summary"
            android:defaultValue="16"
            android:max="32"
            android:min="12" />

        <com.android.settingslib.widget.SliderPreference
            android:key="game_bar_background_alpha"
            android:title="@string/game_bar_bg_alpha_title"
            android:summary="@string/game_bar_bg_alpha_summary"
            android:defaultValue="128"
            android:max="255"
            android:min="0" />

        <com.android.settingslib.widget.SliderPreference
            android:key="game_bar_corner_radius"
            android:title="@string/game_bar_corner_radius_title"
            android:summary="@string/game_bar_corner_radius_summary"
            android:defaultValue="16"
            android:max="100"
            android:min="0" />

        <com.android.settingslib.widget.SliderPreference
            android:key="game_bar_padding"
            android:title="@string/game_bar_padding_title"
            android:summary="@string/game_bar_padding_summary"
            android:defaultValue="12"
            android:max="64"
            android:min="0" />

        <com.android.settingslib.widget.SliderPreference
            android:key="game_bar_item_spacing"
            android:title="@string/game_bar_item_spacing_title"
            android:summary="@string/game_bar_item_spacing_summary"
            android:defaultValue="8"
            android:max="50"
            android:min="0" />

        <ListPreference
            android:key="game_bar_update_interval"
            android:title="@string/game_bar_update_interval_title"
            android:summary="@string/game_bar_update_interval_summary"
            android:defaultValue="1000"
            android:entries="@array/fps_overlay_update_interval_entries"
            android:entryValues="@array/fps_overlay_update_interval_values" />

        <ListPreference
            android:key="game_bar_title_color"
            android:title="@string/game_bar_title_color_title"
            android:summary="@string/game_bar_title_color_summary"
            android:defaultValue="#FFFFFF"
            android:entries="@array/fps_overlay_color_entries"
            android:entryValues="@array/fps_overlay_color_values" />

        <ListPreference
            android:key="game_bar_value_color"
            android:title="@string/game_bar_value_color_title"
            android:summary="@string/game_bar_value_color_summary"
            android:defaultValue="#4CAF50"
            android:entries="@array/fps_overlay_color_entries"
            android:entryValues="@array/fps_overlay_color_values" />

        <ListPreference
            android:key="game_bar_position"
            android:title="@string/game_bar_position_title"
            android:summary="@string/game_bar_position_summary"
            android:defaultValue="top_left"
            android:entries="@array/fps_overlay_position_entries"
            android:entryValues="@array/fps_overlay_position_values" />

        <ListPreference
            android:key="game_bar_format"
            android:title="@string/game_bar_format_title"
            android:summary="@string/game_bar_format_summary"
            android:defaultValue="full"
            android:entries="@array/game_bar_format_entries"
            android:entryValues="@array/game_bar_format_values" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/game_bar_category_split"
        android:dependency="game_bar_enable">

        <ListPreference
            android:key="game_bar_split_mode"
            android:title="@string/game_bar_split_mode_title"
            android:summary="@string/game_bar_split_mode_summary"
            android:defaultValue="stacked"
            android:entries="@array/game_bar_split_mode_entries"
            android:entryValues="@array/game_bar_split_mode_values" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/game_bar_category_gestures"
        android:dependency="game_bar_enable">

        <SwitchPreferenceCompat
            android:key="game_bar_single_tap_toggle"
            android:title="@string/game_bar_single_tap_title"
            android:summary="@string/game_bar_single_tap_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_doubletap_capture"
            android:title="@string/game_bar_doubletap_title"
            android:summary="@string/game_bar_doubletap_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_longpress_enable"
            android:title="@string/game_bar_longpress_enable_title"
            android:summary="@string/game_bar_longpress_enable_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="game_bar_longpress_timeout"
            android:title="@string/game_bar_longpress_timeout_title"
            android:summary="@string/game_bar_longpress_timeout_summary"
            android:defaultValue="1000"
            android:entries="@array/game_bar_longpress_entries"
            android:entryValues="@array/game_bar_longpress_values"
            android:dependency="game_bar_longpress_enable" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/game_bar_category_capture"
        android:dependency="game_bar_enable">

        <Preference
            android:key="game_bar_capture_start"
            android:title="@string/game_bar_capture_start_title"
            android:summary="@string/game_bar_capture_start_summary" />

        <Preference
            android:key="game_bar_capture_stop"
            android:title="@string/game_bar_capture_stop_title"
            android:summary="@string/game_bar_capture_stop_summary" />

        <Preference
            android:key="game_bar_capture_export"
            android:title="@string/game_bar_capture_export_title"
            android:summary="@string/game_bar_capture_export_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/game_bar_category_auto">
        <SwitchPreferenceCompat
            android:key="game_bar_auto_enable"
            android:title="@string/game_bar_auto_enable_title"
            android:summary="@string/game_bar_auto_enable_summary"
            android:defaultValue="false" />

        <Preference
            android:key="game_bar_app_selector"
            android:title="@string/game_bar_app_selector_title"
            android:summary="@string/game_bar_app_selector_summary" />
    </PreferenceCategory>

</PreferenceScreen>
