<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/parts_settings_category_title">

        <Preference
            android:key="parts_backlight"
            android:title="@string/light_settings_title"
            android:summary="@string/light_settings_summary"
            android:icon="@drawable/ic_backlight" />

        <Preference
            android:key="parts_game_bar"
            android:title="@string/game_bar_title"
            android:summary="@string/game_bar_summary"
            android:icon="@drawable/ic_gamebar" />

        <Preference
            android:key="parts_touch_sampling"
            android:title="@string/htsr_title"
            android:summary="@string/htsr_enable_summary"
            android:icon="@drawable/ic_touch_sampling_tile" />

        <Preference
            android:key="parts_core_control"
            android:title="@string/core_control_title"
            android:summary="@string/core_control_summary"
            android:icon="@drawable/ic_thermal_settings" />

        <Preference
            android:key="parts_charging_control"
            android:title="@string/charging_control_title"
            android:summary="@string/charging_control_summary"
            android:icon="@drawable/ic_charging_control" />

    </PreferenceCategory>

</PreferenceScreen>
