<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:title="@string/light_settings_title">

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="light_enable"
        android:title="@string/light_enable_title"
        android:defaultValue="false" />

    <PreferenceCategory
        android:key="light_category_standalone"
        android:title="@string/light_standalone_title"
        android:dependency="light_enable">
        <androidx.preference.SwitchPreferenceCompat
            android:key="light_standalone_enable"
            android:title="@string/light_standalone_enable_title"
            android:defaultValue="false" />
        <ListPreference
            android:key="light_standalone_color"
            android:title="@string/light_standalone_color_title"
            android:entries="@array/led_color_entries"
            android:entryValues="@array/led_color_values"
            android:dependency="light_standalone_enable"
            android:defaultValue="ff0000" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="light_category_charging"
        android:title="@string/light_charging_title"
        android:dependency="light_enable">
        <androidx.preference.SwitchPreferenceCompat
            android:key="light_charging_enable"
            android:title="@string/light_charging_title"
            android:summary="@string/light_charging_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="light_category_incoming_call"
        android:title="@string/light_incoming_call_title"
        android:dependency="light_enable">
        <androidx.preference.SwitchPreferenceCompat
            android:key="light_incoming_call_enable"
            android:title="@string/light_incoming_call_title"
            android:summary="@string/light_incoming_call_summary"
            android:defaultValue="false" />
        <ListPreference
            android:key="light_incoming_call_color"
            android:title="@string/light_incoming_call_color_title"
            android:entries="@array/led_color_entries"
            android:entryValues="@array/led_color_values"
            android:dependency="light_incoming_call_enable"
            android:defaultValue="ff0000" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="light_category_notifications"
        android:title="@string/light_notifications_title"
        android:dependency="light_enable">
        <androidx.preference.SwitchPreferenceCompat
            android:key="light_notifications_enable"
            android:title="@string/light_notifications_title"
            android:summary="@string/light_notifications_summary"
            android:defaultValue="false" />
        <ListPreference
            android:key="light_notifications_color"
            android:title="@string/light_notifications_color_title"
            android:entries="@array/led_color_entries"
            android:entryValues="@array/led_color_values"
            android:dependency="light_notifications_enable"
            android:defaultValue="ff0000" />
        <Preference
            android:key="light_notifications_apps"
            android:title="@string/light_notifications_apps_title"
            android:dependency="light_notifications_enable" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="light_category_music"
        android:title="@string/light_music_title"
        android:dependency="light_enable">
        <androidx.preference.SwitchPreferenceCompat
            android:key="light_music_enable"
            android:title="@string/light_music_title"
            android:summary="@string/light_music_summary"
            android:defaultValue="false" />
        <Preference
            android:key="light_music_apps"
            android:title="@string/light_music_apps_title"
            android:dependency="light_music_enable" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="light_category_game_mode"
        android:title="@string/light_game_mode_title"
        android:dependency="light_enable">
        <androidx.preference.SwitchPreferenceCompat
            android:key="light_game_mode_enable"
            android:title="@string/light_game_mode_title"
            android:summary="@string/light_game_mode_summary"
            android:defaultValue="false" />
        <Preference
            android:key="light_game_mode_apps"
            android:title="@string/light_game_mode_apps_title"
            android:dependency="light_game_mode_enable" />
    </PreferenceCategory>

</PreferenceScreen>
